@@ -1,7 +1,7 @@
 MIME-Version: 1.0
 Content-Type: text/plain; charset="iso-8859-1"
 Content-Transfer-Encoding: quoted-printable
-To: =?iso-8859-1?q?Friedrich_H=F6lderlin?= <to@example.org>
+To: "=?iso-8859-1?q?Friedrich_H=F6lderlin?=" <to@example.org>
 From: from@example.org
 Cc: cc@example.org
 Subject: =?iso-8859-1?q?Die_B=FCrgschaft?=
