@@ -5,6 +5,9 @@ Changelog
 2.1.1 (unreleased)
 ------------------
 
+- Fix From-/To-/Cc-Header encoding problem with Apple Mail.
+  [jone]
+
 - Made primary field also for dexterity-1 installations working.
   [phgross]
 
